# goalkeeper-cli

./: .gitignore  MIGRATION.md  README.md  install.sh  pyproject.toml  setup.py
src/goalkeeper_cli/: __init__.py  cli.py  notify.py
src/goalkeeper_cli/adapters/: __init__.py  antigravity.py  base.py  claude.py  codex.py
src/goalkeeper_cli/core/: config.py  dispatcher.py  event.py  runner.py
src/goalkeeper_cli/providers/: base.py  telegram.py
tests/: test_adapter_detection.py  test_event_mapping.py  test_notification_dispatch.py  test_quota_scheduling.py  test_regression.py
