[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goalkeeper-cli"
version = "1.0.0"
description = "Telegram notifications and quota reset queue manager for Claude Code, Codex, and Antigravity CLI agents."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Yuvaraj", email = "yuvaraja.1997@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
goalkeeper = "goalkeeper_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/goalkeeper_cli"]
